tests/fixtures/valid/PrivateConstHeredoc.php
<?php

declare(strict_types=1);

namespace Test;

class PrivateConstHeredoc
{
    private const MY_NOWDOC = <<<HEREDOC
        indented!
        HEREDOC;
}
